@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,19 +23,22 @@
 
 /*
  * @test
- * @modules java.base/jdk.internal.foreign
+ * @modules java.base/jdk.internal.foreign java.base/jdk.internal.foreign.abi.fallback
  * @run testng TestLinker
- * @run testng/othervm/policy=security.policy
- *          -Djava.security.manager=default TestLinker
+ * @run testng/othervm TestLinker
  */
 
 import jdk.internal.foreign.CABI;
+import jdk.internal.foreign.abi.fallback.FallbackLinker;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
 import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.PaddingLayout;
+import java.lang.foreign.SequenceLayout;
+import java.lang.foreign.StructLayout;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.util.ArrayList;
@@ -43,12 +46,8 @@ import java.util.Arrays;
 import java.util.List;
 
 import static java.lang.foreign.MemoryLayout.*;
-import static java.lang.foreign.ValueLayout.JAVA_CHAR;
-import static java.lang.foreign.ValueLayout.JAVA_SHORT;
-import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.assertSame;
-import static org.testng.Assert.assertNotSame;
-import static org.testng.Assert.assertTrue;
+import static java.lang.foreign.ValueLayout.*;
+import static org.testng.Assert.*;
 
 public class TestLinker extends NativeTestHelper {
 
@@ -149,6 +148,116 @@ public class TestLinker extends NativeTestHelper {
         MemoryLayout layout = LINKER.canonicalLayouts().get(typeName);
         assertNotNull(layout);
         assertTrue(layout instanceof ValueLayout);
+    }
+
+    @Test
+    public void embeddedPaddingLayout() {
+        PaddingLayout padding = MemoryLayout.paddingLayout(64).withByteAlignment(64);
+        SequenceLayout sequence = MemoryLayout.sequenceLayout(2, padding);
+        StructLayout struct = MemoryLayout.structLayout(sequence);
+        FunctionDescriptor fd = FunctionDescriptor.of(struct, struct);
+        Linker linker = Linker.nativeLinker();
+        var x = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertTrue(x.getMessage().contains("not supported because a sequence of a padding layout is not allowed"));
+    }
+
+    @Test
+    public void groupLayoutWithOnlyPadding() {
+        PaddingLayout padding = MemoryLayout.paddingLayout(1);
+        StructLayout struct = MemoryLayout.structLayout(padding);
+        FunctionDescriptor fd = FunctionDescriptor.of(struct, struct);
+        Linker linker = Linker.nativeLinker();
+        var x = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertTrue(x.getMessage().contains("is non-empty and only has padding layouts"));
+    }
+
+    @Test
+    public void interwovenPadding() {
+        Linker linker = Linker.nativeLinker();
+        var padding1 = MemoryLayout.paddingLayout(1);
+        var padding2 = MemoryLayout.paddingLayout(2).withByteAlignment(2);
+
+        var struct = MemoryLayout.structLayout(JAVA_BYTE, padding1, padding2, JAVA_INT);
+
+        var fd = FunctionDescriptor.of(struct, struct, struct);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(),
+                "The padding layout x2 was preceded by another padding layout x1 in " + struct);
+    }
+
+    @Test
+    public void stackedPadding() {
+        Linker linker = Linker.nativeLinker();
+        var struct32 = MemoryLayout.structLayout(MemoryLayout.sequenceLayout(4, JAVA_LONG));
+        var padding1 = MemoryLayout.paddingLayout(1);
+        var padding2 = MemoryLayout.paddingLayout(2).withByteAlignment(2);
+        var padding4 = MemoryLayout.paddingLayout(4).withByteAlignment(4);
+        var padding8 = MemoryLayout.paddingLayout(8).withByteAlignment(8);
+        var padding16 = MemoryLayout.paddingLayout(16).withByteAlignment(16);
+        var padding32 = MemoryLayout.paddingLayout(32).withByteAlignment(32);
+        var union = MemoryLayout.unionLayout(struct32, padding32);
+        var struct = MemoryLayout.structLayout(JAVA_BYTE, padding1, padding2, padding4, padding8, padding16, union);
+        var fd = FunctionDescriptor.of(struct, struct, struct);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(),
+                "The padding layout x2 was preceded by another padding layout x1 in " + struct);
+    }
+
+    @Test
+    public void paddingUnionByteSize3() {
+        Linker linker = Linker.nativeLinker();
+        var union = MemoryLayout.unionLayout(MemoryLayout.paddingLayout(3), ValueLayout.JAVA_INT);
+        var fd = FunctionDescriptor.of(union, union, union);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(), "Superfluous padding x3 in " + union);
+    }
+
+    @Test
+    public void paddingUnionByteSize4() {
+        Linker linker = Linker.nativeLinker();
+        var union = MemoryLayout.unionLayout(MemoryLayout.paddingLayout(4), ValueLayout.JAVA_INT);
+        var fd = FunctionDescriptor.of(union, union, union);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(), "Superfluous padding x4 in " + union);
+    }
+
+    @Test
+    public void paddingUnionByteSize5() {
+        Linker linker = Linker.nativeLinker();
+        var union = MemoryLayout.unionLayout(MemoryLayout.paddingLayout(5), ValueLayout.JAVA_INT);
+        var fd = FunctionDescriptor.of(union, union, union);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(), "Layout '" + union + "' has unexpected size: 5 != 4");
+    }
+
+    @Test
+    public void paddingUnionSeveral() {
+        Linker linker = Linker.nativeLinker();
+        var union = MemoryLayout.unionLayout(
+                MemoryLayout.sequenceLayout(3, ValueLayout.JAVA_INT),
+                ValueLayout.JAVA_LONG,
+                MemoryLayout.paddingLayout(16),
+                MemoryLayout.paddingLayout(16));
+        var fd = FunctionDescriptor.of(union, union, union);
+        var e = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+        assertEquals(e.getMessage(), "More than one padding in " + union);
+    }
+
+    @Test
+    public void sequenceOfZeroElements() {
+        Linker linker = Linker.nativeLinker();
+        var sequence0a8 = MemoryLayout.sequenceLayout(0, JAVA_LONG);
+        var sequence3a1 = MemoryLayout.sequenceLayout(3, JAVA_BYTE);
+        var padding5a1 = MemoryLayout.paddingLayout(5);
+        var struct8a8 = MemoryLayout.structLayout(sequence0a8, sequence3a1, padding5a1);
+        var fd = FunctionDescriptor.of(struct8a8, struct8a8, struct8a8);
+        if (linker.getClass().equals(FallbackLinker.class)) {
+            // The fallback linker does not support empty layouts (FFI_BAD_TYPEDEF)
+            var iae = expectThrows(IllegalArgumentException.class, () -> linker.downcallHandle(fd));
+            assertTrue(iae.getMessage().contains("is empty"));
+        } else {
+            linker.downcallHandle(fd);
+        }
     }
 
     @DataProvider
