@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,13 +23,13 @@
 
 /**
  * @test
- * @bug 4057701 6286712 6364377 8181919
+ * @bug 4057701 6286712 6364377 8181919 8349092
  * @requires (os.family == "linux" | os.family == "mac" |
  *            os.family == "windows")
  * @summary Basic functionality of File.get-X-Space methods.
  * @library .. /test/lib
  * @build jdk.test.lib.Platform
- * @run main/othervm/native -Djava.security.manager=allow GetXSpace
+ * @run main/othervm/native GetXSpace
  */
 
 import java.io.BufferedReader;
@@ -40,7 +40,6 @@ import java.nio.file.Files;
 import java.nio.file.FileStore;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.security.Permission;
 import java.util.ArrayList;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -50,14 +49,12 @@ import jdk.test.lib.Platform;
 import static java.lang.System.err;
 import static java.lang.System.out;
 
-@SuppressWarnings("removal")
 public class GetXSpace {
     static {
         System.loadLibrary("GetXSpace");
     }
 
-    private static SecurityManager [] sma = { null, new Allow(), new DenyFSA(),
-                                              new DenyRead() };
+    private static final Pattern DF_PATTERN = Pattern.compile("([^\\s]+)\\s+(\\d+)\\s+(\\d+)\\s+(\\d+)\\s+\\d+%\\s+([^\\s].*)\n");
 
     private static int fail = 0;
     private static int pass = 0;
@@ -109,8 +106,17 @@ public class GetXSpace {
         Space(String name) {
             this.name = name;
             long[] sizes = new long[4];
-            if (getSpace0(name, sizes))
-                System.err.println("WARNING: total space is estimated");
+            if (Platform.isWindows() & isCDDrive(name)) {
+                try {
+                    getCDDriveSpace(name, sizes);
+                } catch (IOException e) {
+                    e.printStackTrace();
+                    throw new RuntimeException("can't get CDDrive sizes");
+                }
+            } else {
+                if (getSpace0(name, sizes))
+                    System.err.println("WARNING: total space is estimated");
+            }
             this.size = sizes[0];
             this.total = sizes[1];
             this.free = sizes[2];
@@ -164,45 +170,22 @@ public class GetXSpace {
         return al;
     }
 
-    private static void tryCatch(Space s) {
-        out.format("%s:%n", s.name());
-        File f = new File(s.name());
-        SecurityManager sm = System.getSecurityManager();
-        if (sm instanceof Deny) {
-            String fmt = "  %14s: \"%s\" thrown as expected%n";
-            try {
-                f.getTotalSpace();
-                fail(s.name(), SecurityException.class);
-            } catch (SecurityException x) {
-                out.format(fmt, "getTotalSpace", x);
-                pass();
-            }
-            try {
-                f.getFreeSpace();
-                fail(s.name(), SecurityException.class);
-            } catch (SecurityException x) {
-                out.format(fmt, "getFreeSpace", x);
-                pass();
-            }
-            try {
-                f.getUsableSpace();
-                fail(s.name(), SecurityException.class);
-            } catch (SecurityException x) {
-                out.format(fmt, "getUsableSpace", x);
-                pass();
-            }
-        }
-    }
-
     private static void compare(Space s) {
         File f = new File(s.name());
         long ts = f.getTotalSpace();
         long fs = f.getFreeSpace();
         long us = f.getUsableSpace();
 
+        // Verify inequalities us <= fs <= ts (JDK-8349092)
+        if (fs > ts)
+            throw new RuntimeException(f + " free space " + fs + " > total space " + ts);
+        if (us > fs)
+            throw new RuntimeException(f + " usable space " + us + " > free space " + fs);
+
         out.format("%s (%d):%n", s.name(), s.size());
         String fmt = "  %-4s total = %12d free = %12d usable = %12d%n";
-        out.format(fmt, "getSpace0", s.total(), s.free(), s.available());
+        String method = Platform.isWindows() & isCDDrive(s.name()) ? "getCDDriveSpace" : "getSpace0";
+        out.format(fmt, method, s.total(), s.free(), s.available());
         out.format(fmt, "getXSpace", ts, fs, us);
 
         // If the file system can dynamically change size, this check will fail.
@@ -341,52 +324,6 @@ public class GetXSpace {
         }
     }
 
-    private static class Allow extends SecurityManager {
-        public void checkRead(String file) {}
-        public void checkPermission(Permission p) {}
-        public void checkPermission(Permission p, Object context) {}
-    }
-
-    private static class Deny extends SecurityManager {
-        public void checkPermission(Permission p) {
-            if (p.implies(new RuntimePermission("setSecurityManager"))
-                || p.implies(new RuntimePermission("getProtectionDomain")))
-                return;
-            super.checkPermission(p);
-        }
-
-        public void checkPermission(Permission p, Object context) {
-            if (p.implies(new RuntimePermission("setSecurityManager"))
-                || p.implies(new RuntimePermission("getProtectionDomain")))
-                return;
-            super.checkPermission(p, context);
-        }
-    }
-
-    private static class DenyFSA extends Deny {
-        private String err = "sorry - getFileSystemAttributes";
-
-        public void checkPermission(Permission p) {
-            if (p.implies(new RuntimePermission("getFileSystemAttributes")))
-                throw new SecurityException(err);
-            super.checkPermission(p);
-        }
-
-        public void checkPermission(Permission p, Object context) {
-            if (p.implies(new RuntimePermission("getFileSystemAttributes")))
-                throw new SecurityException(err);
-            super.checkPermission(p, context);
-        }
-    }
-
-    private static class DenyRead extends Deny {
-        private String err = "sorry - checkRead()";
-
-        public void checkRead(String file) {
-            throw new SecurityException(err);
-        }
-    }
-
     private static int testFile(Path dir) {
         String dirName = dir.toString();
         out.format("--- Testing %s%n", dirName);
@@ -405,7 +342,7 @@ public class GetXSpace {
     private static int testVolumes() {
         out.println("--- Testing volumes");
         // Find all of the partitions on the machine and verify that the sizes
-        // returned by File::getXSpace are equivalent to those from getSpace0
+        // returned by File::getXSpace are equivalent to those from getSpace0 or getCDDriveSpace
         ArrayList<String> l;
         try {
             l = paths();
@@ -418,28 +355,12 @@ public class GetXSpace {
         if (l.size() == 0)
             throw new RuntimeException("no partitions?");
 
-        for (int i = 0; i < sma.length; i++) {
-            System.setSecurityManager(sma[i]);
-            SecurityManager sm = System.getSecurityManager();
-            if (sma[i] != null && sm == null)
-                throw new RuntimeException("Test configuration error "
-                                           + " - can't set security manager");
-
-            out.format("%nSecurityManager = %s%n" ,
-                       (sm == null ? "null" : sm.getClass().getName()));
-            for (var p : l) {
-                Space s = new Space(p);
-                if (sm instanceof Deny) {
-                    tryCatch(s);
-                } else {
-                    compare(s);
-                    compareZeroNonExist();
-                    compareZeroExist();
-                }
-            }
+        for (var p : l) {
+            Space s = new Space(p);
+            compare(s);
+            compareZeroNonExist();
+            compareZeroExist();
         }
-
-        System.setSecurityManager(null);
 
         if (fail != 0) {
             err.format("%d tests: %d failure(s); first: %s%n",
@@ -494,4 +415,40 @@ public class GetXSpace {
     // size[3]  usable space: number of bytes available to the caller
     //
     private static native boolean getSpace0(String root, long[] space);
+
+    private static native boolean isCDDrive(String root);
+
+    private static void getCDDriveSpace(String root, long[] sizes)
+        throws IOException {
+        String[] cmd = new String[] {"df", "-k", "-P", root};
+        Process p = Runtime.getRuntime().exec(cmd);
+        StringBuilder sb = new StringBuilder();
+
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
+            String s;
+            int i = 0;
+            while ((s = in.readLine()) != null) {
+                // skip header
+                if (i++ == 0) continue;
+                sb.append(s).append("\n");
+            }
+        }
+        out.println(sb);
+
+        Matcher m = DF_PATTERN.matcher(sb);
+        int j = 0;
+        while (j < sb.length()) {
+            if (m.find(j)) {
+                sizes[0] = Long.parseLong(m.group(2)) * 1024;
+                sizes[1] = Long.parseLong(m.group(3)) * 1024;
+                sizes[2] = sizes[0] - sizes[1];
+                sizes[3] = Long.parseLong(m.group(4)) * 1024;
+                j = m.end();
+            } else {
+                throw new RuntimeException("unrecognized df output format: "
+                                           + "charAt(" + j + ") = '"
+                                           + sb.charAt(j) + "'");
+            }
+        }
+    }
 }
