@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,56 +23,32 @@
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FilePermission;
 import java.io.IOException;
-import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import static java.nio.file.StandardOpenOption.CREATE_NEW;
-import static java.nio.file.StandardOpenOption.WRITE;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.List;
 import java.util.Properties;
-import java.util.PropertyPermission;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.FileHandler;
 import java.util.logging.LogManager;
-import java.util.logging.LoggingPermission;
 
 /**
  * @test
  * @bug 8059269
  * @summary tests that using a simple (non composite) pattern does not lead
  *        to NPE when the lock file already exists.
- * @run main/othervm FileHandlerPath UNSECURE
- * @run main/othervm -Djava.security.manager=allow FileHandlerPath SECURE
+ * @run main/othervm FileHandlerPath
  * @author danielfuchs
  * @key randomness
  */
 public class FileHandlerPath {
 
-    /**
-     * We will test the simple pattern in two configurations.
-     * UNSECURE: No security manager.
-     * SECURE: With the security manager present - and the required
-     *         permissions granted.
-     */
-    public static enum TestCase {
-        UNSECURE, SECURE;
-        public void run(Properties propertyFile) throws Exception {
-            System.out.println("Running test case: " + name());
-            Configure.setUp(this, propertyFile);
-            test(this.name() + " " + propertyFile.getProperty("test.name"), propertyFile);
-        }
+    // We will test the simple pattern
+    public static void run(Properties propertyFile) throws Exception {
+        setUp(propertyFile);
+        test(propertyFile.getProperty("test.name"), propertyFile);
     }
 
 
@@ -101,13 +77,6 @@ public class FileHandlerPath {
     }
 
     public static void main(String... args) throws Exception {
-
-        if (args == null || args.length == 0) {
-            args = new String[] {
-                TestCase.UNSECURE.name(),
-                TestCase.SECURE.name(),
-            };
-        }
 
         // Sanity checks
 
@@ -140,89 +109,46 @@ public class FileHandlerPath {
         // Now start the real test
 
         try {
-            for (String testName : args) {
-                for (Properties propertyFile : properties) {
-                    TestCase test = TestCase.valueOf(testName);
-                    test.run(propertyFile);
-                }
+            for (Properties propertyFile : properties) {
+                run(propertyFile);
             }
         } finally {
             // Cleanup...
-            Configure.doPrivileged(() -> {
-                for(File log : files) {
-                    try {
-                        final boolean isLockFile = log.getName().endsWith(".lck");
-                        // lock file should already be deleted, except if the
-                        // test failed in exception.
-                        // log file should all be present, except if the test
-                        // failed in exception.
-                        if (log.exists()) {
-                            if (!isLockFile) {
-                                System.out.println("deleting "+log.toString());
-                            } else {
-                                System.err.println("deleting lock file "+log.toString());
-                            }
-                            log.delete();
+            for(File log : files) {
+                try {
+                    final boolean isLockFile = log.getName().endsWith(".lck");
+                    // lock file should already be deleted, except if the
+                    // test failed in exception.
+                    // log file should all be present, except if the test
+                    // failed in exception.
+                    if (log.exists()) {
+                        if (!isLockFile) {
+                            System.out.println("deleting "+log.toString());
                         } else {
-                            if (!isLockFile) {
-                                System.err.println(log.toString() + ": not found.");
-                            }
+                            System.err.println("deleting lock file "+log.toString());
                         }
-                    } catch (Throwable t) {
-                        // should not happen
-                        t.printStackTrace();
+                        log.delete();
+                    } else {
+                        if (!isLockFile) {
+                            System.err.println(log.toString() + ": not found.");
+                        }
                     }
+                } catch (Throwable t) {
+                    // should not happen
+                    t.printStackTrace();
                 }
-            });
+            }
         }
     }
 
-    static class Configure {
-        static Policy policy = null;
-        static final AtomicBoolean allowAll = new AtomicBoolean(false);
-        static void setUp(TestCase test, Properties propertyFile) {
-            switch (test) {
-                case SECURE:
-                    if (policy == null && System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    } else if (policy == null) {
-                        policy = new SimplePolicy(TestCase.SECURE, allowAll);
-                        Policy.setPolicy(policy);
-                        System.setSecurityManager(new SecurityManager());
-                    }
-                    if (System.getSecurityManager() == null) {
-                        throw new IllegalStateException("No SecurityManager.");
-                    }
-                    if (policy == null) {
-                        throw new IllegalStateException("policy not configured");
-                    }
-                    break;
-                case UNSECURE:
-                    if (System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    }
-                    break;
-                default:
-                    new InternalError("No such testcase: " + test);
-            }
-            doPrivileged(() -> {
-                try {
-                    ByteArrayOutputStream bytes = new ByteArrayOutputStream();
-                    propertyFile.store(bytes, propertyFile.getProperty("test.name"));
-                    ByteArrayInputStream bais = new ByteArrayInputStream(bytes.toByteArray());
-                    LogManager.getLogManager().readConfiguration(bais);
-                } catch (IOException ex) {
-                    throw new RuntimeException(ex);
-                }
-            });
-        }
-        static void doPrivileged(Runnable run) {
-            allowAll.set(true);
-            try {
-                run.run();
-            } finally {
-                allowAll.set(false);
-            }
+    static void setUp(Properties propertyFile) {
+        try {
+            ByteArrayOutputStream bytes = new ByteArrayOutputStream();
+            propertyFile.store(bytes, propertyFile.getProperty("test.name"));
+            ByteArrayInputStream bais = new ByteArrayInputStream(bytes.toByteArray());
+            LogManager.getLogManager().readConfiguration(bais);
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
         }
     }
 
@@ -237,82 +163,6 @@ public class FileHandlerPath {
         final FileHandler f2 = new FileHandler();
         f1.close();
         f2.close();
-        System.out.println("Success for " + name);
+        System.out.println("Success for: " + name);
     }
-
-
-    static final class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    public static class SimplePolicy extends Policy {
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final Permissions allPermissions;
-        final AtomicBoolean allowAll;
-        public SimplePolicy(TestCase test, AtomicBoolean allowAll) {
-            this.allowAll = allowAll;
-            permissions = new Permissions();
-            permissions.add(new LoggingPermission("control", null)); // needed by new FileHandler()
-            permissions.add(new FilePermission("<<ALL FILES>>", "read")); // needed by new FileHandler()
-            permissions.add(new FilePermission(logFile, "write,delete")); // needed by new FileHandler()
-            permissions.add(new FilePermission(logFile+".lck", "write,delete")); // needed by FileHandler.close()
-            permissions.add(new FilePermission(logFile+".1", "write,delete")); // needed by new FileHandler()
-            permissions.add(new FilePermission(logFile+".1.lck", "write,delete")); // needed by FileHandler.close()
-            permissions.add(new FilePermission(tmpLogFile, "write,delete")); // needed by new FileHandler()
-            permissions.add(new FilePermission(tmpLogFile+".lck", "write,delete")); // needed by FileHandler.close()
-            permissions.add(new FilePermission(tmpLogFile+".1", "write,delete")); // needed by new FileHandler()
-            permissions.add(new FilePermission(tmpLogFile+".1.lck", "write,delete")); // needed by FileHandler.close()
-            permissions.add(new FilePermission(userDir, "write")); // needed by new FileHandler()
-            permissions.add(new FilePermission(tmpDir, "write")); // needed by new FileHandler()
-            permissions.add(new PropertyPermission("user.dir", "read"));
-            permissions.add(new PropertyPermission("java.io.tmpdir", "read"));
-            allPermissions = new Permissions();
-            allPermissions.add(new java.security.AllPermission());
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            if (allowAll.get()) return allPermissions.implies(permission);
-            return permissions.implies(permission) || DEFAULT_POLICY.implies(domain, permission);
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(allowAll.get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(allowAll.get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-    }
-
 }
